feat(argocd): update service configurations for Grafana, Prometheus, and Alertmanager to use LoadBalancer with Azure DNS labels; enhance ArgoCD setup instructions

--- a/.github/workflows/setup-argocd.yml
+++ b/.github/workflows/setup-argocd.yml
@@ -168,10 +168,41 @@ jobs:
           echo "Username: admin"
           echo "Password: (stored in argocd-initial-admin-secret)"
           echo ""
-          echo "To access ArgoCD UI:"
-          echo "1. Via Ingress: https://final.naseroish.com/argocd"
-          echo "2. Via port-forward: kubectl port-forward svc/argocd-server -n argocd 8080:443"
-          echo "   Then visit: https://localhost:8080"
+          echo "⚠️  IMPORTANT: DNS Configuration Required"
+          echo "=========================================="
+          echo "The following services are exposed via LoadBalancer with Azure DNS labels:"
+          echo ""
+          echo "1. ArgoCD UI:"
+          echo "   - Azure DNS: argocd-naseroish.<region>.cloudapp.azure.com"
+          echo "   - Configure Cloudflare CNAME: argocd.naseroish.com → argocd-naseroish.<region>.cloudapp.azure.com"
+          echo ""
+          echo "2. Grafana:"
+          echo "   - Azure DNS: grafana-naseroish.<region>.cloudapp.azure.com"
+          echo "   - Configure Cloudflare CNAME: grafana.naseroish.com → grafana-naseroish.<region>.cloudapp.azure.com"
+          echo ""
+          echo "3. Prometheus:"
+          echo "   - Azure DNS: prometheus-naseroish.<region>.cloudapp.azure.com"
+          echo "   - Configure Cloudflare CNAME: prometheus.naseroish.com → prometheus-naseroish.<region>.cloudapp.azure.com"
+          echo ""
+          echo "4. Alertmanager:"
+          echo "   - Azure DNS: alertmanager-naseroish.<region>.cloudapp.azure.com"
+          echo "   - Configure Cloudflare CNAME: alertmanager.naseroish.com → alertmanager-naseroish.<region>.cloudapp.azure.com"
+          echo ""
+          echo "5. Expensy App (via NGINX Ingress):"
+          echo "   - Your existing final.naseroish.com setup remains unchanged"
+          echo ""
+          echo "To get the actual Azure DNS names, run:"
+          echo "  kubectl get svc -n argocd argocd-ui-argo-cd-argocd-server -o jsonpath='{.status.loadBalancer.ingress[0].ip}'"
+          echo "  kubectl get svc -n monitoring monitoring-prometheus-grafana -o jsonpath='{.status.loadBalancer.ingress[0].ip}'"
+          echo "  kubectl get svc -n monitoring monitoring-prometheus-kube-prometheus -o jsonpath='{.status.loadBalancer.ingress[0].ip}'"
+          echo "  kubectl get svc -n monitoring monitoring-prometheus-kube-alertmanager -o jsonpath='{.status.loadBalancer.ingress[0].ip}'"
+          echo ""
+          echo "Benefits of this architecture:"
+          echo "  ✅ Clean separation of concerns"
+          echo "  ✅ No subpath routing issues"
+          echo "  ✅ Better security isolation"
+          echo "  ✅ Independent scaling per service"
+          echo "  ✅ Easier SSL/TLS management with Cloudflare"
 
       - name: Cleanup port-forward
         if: always() && github.event.inputs.action == 'install'
