--- a/kubernetes/ingress-manifest.yaml
+++ b/kubernetes/ingress-manifest.yaml
@@ -1,76 +1,6 @@
 ---
-# Ingress for Monitoring Tools (Grafana, Prometheus, Alertmanager)
-# IMPORTANT: This must be defined BEFORE the catch-all frontend route
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: monitoring-ingress
-  namespace: monitoring
-  annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-spec:
-  ingressClassName: nginx
-  rules:
-    - host: final.naseroish.com
-      http:
-        paths:
-          # Grafana - must match what's configured in Helm values
-          - path: /grafana
-            pathType: Prefix
-            backend:
-              service:
-                name: monitoring-prometheus-grafana
-                port:
-                  number: 80
-
-          # Prometheus
-          - path: /prometheus
-            pathType: Prefix
-            backend:
-              service:
-                name: monitoring-prometheus-kube-prometheus
-                port:
-                  number: 9090
-
-          # Alertmanager
-          - path: /alertmanager
-            pathType: Prefix
-            backend:
-              service:
-                name: monitoring-prometheus-kube-alertmanager
-                port:
-                  number: 9093
-
----
-# Ingress for ArgoCD UI
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: argocd-ingress
-  namespace: argocd
-  annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-spec:
-  ingressClassName: nginx
-  rules:
-    - host: final.naseroish.com
-      http:
-        paths:
-          # ArgoCD UI
-          - path: /argocd
-            pathType: Prefix
-            backend:
-              service:
-                name: argocd-server
-                port:
-                  number: 443
-
----
-# Ingress for Expensy Application
-# IMPORTANT: Frontend catch-all route (/) should be LAST
+# Ingress for Expensy Application (Frontend + Backend only)
+# Monitoring tools (Grafana, Prometheus, Alertmanager) and ArgoCD use LoadBalancer services with subdomains
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
