feat(cert-manager): add ClusterIssuers for Let's Encrypt production and staging; update ingress for SSL/TLS configuration

--- a/kubernetes/ingress-manifest.yaml
+++ b/kubernetes/ingress-manifest.yaml
@@ -7,17 +7,30 @@ metadata:
   name: expensy-ingress
   namespace: expensy
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    # SSL/TLS Configuration
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    
+    # General Configuration
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rate-limit: "100"
+    
+    # CORS Configuration
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    
+    # Timeout Configuration
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+    - final.naseroish.com
+    secretName: final-naseroish-tls
   rules:
     - host: final.naseroish.com
       http:
