--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "express": "4.19.2",
     "ioredis": "^5.4.1",
     "mongoose": "8.5.0",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
@@ -29,4 +30,3 @@
     "typescript": "5.5.3"
   }
 }
-
