--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "npm run build && next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "preview": "next build && next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-alert-dialog": "1.0.5",
+    "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-slot": "1.0.2",
     "axios": "1.7.2",
