--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,21 +14,24 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "1.0.5",
+    "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-label": "2.1.0",
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tabs": "1.0.4",
     "axios": "1.7.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "1.2.1",
-    "lucide-react": "0.105.0-alpha.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.105.0-alpha.4",
     "next": "^16.0.0",
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recharts": "2.12.7",
+    "recharts": "^2.15.4",
     "sharp": "0.31.3",
-    "tailwind-merge": "1.13.2",
-    "tailwindcss-animate": "1.0.6"
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "3.7.2",
